<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="app_name_spotify_streamer">Spotify Streamer</string>
    <string name="app_name_scores_app">Scores App</string>
    <string name="app_name_library_app">Library App</string>
    <string name="app_name_build_it_bigger">Build It Bigger</string>
    <string name="app_name_xyz_reader">XYZ Reader</string>
    <string name="app_name_capstone_my_own_app">Capstone: My Own App</string>

    <string name="toast_info">This button will launch %1$s!</string>
</resources>
